5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4085/executions/1789_1600.log
== TEST (2019-05-29 18:11:28) 
-- CODE:
from numpy import *
custo = array(eval(input("digite os custos dos itens: ")))
if (custo[i] > 80):
	custo[i] = custo[i] - 0.15 * custo [i]
else:
	custo[i] = custo[i]
print(sum(custo, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:11:55) 
-- CODE:
from numpy import *
custo = array(eval(input("digite os custos dos itens: ")))
if (custo[i] > 80):
	custo[i] = custo[i] - 0.15 * custo [i]
else:
	custo[i] = custo[i]
print(sum(custo, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:11:59) 
-- CODE:
from numpy import *
custo = array(eval(input("digite os custos dos itens: ")))
if (custo[i] > 80):
	custo[i] = custo[i] - 0.15 * custo [i]
else:
	custo[i] = custo[i]
print(sum(custo, 2))
-- EXECUTION TIME:
0.53391
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1789/1600/main.py", line 3, in <module>
    if (custo[i] > 80):
NameError: name 'i' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:12:10) 
-- CODE:
from numpy import *
custo = array(eval(input("digite os custos dos itens: ")))
if (custo[i] > 80):
	custo[i] = custo[i] - 0.15 * custo [i]
else:
	custo[i] = custo[i]
print(sum(custo, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:13:32) 
-- CODE:
from numpy import *
custo = array(eval(input("digite os custos dos itens: ")))
i = 0
if (custo[i] > 80):
	custo[i] = custo[i] - 0.15 * custo [i]
else:
	custo[i] = custo[i]
print(sum(custo, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:19:06) 
-- CODE:
from numpy import *
custo = array(eval(input("digite os custos dos itens: ")))
i = 0
if (custo[i] > 80):
	custo[i] = custo[i] - 0.15 * custo [i]
else:
	custo[i] = custo[i]
print(sum(custo, 2))
-- EXECUTION TIME:
0.423963
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1789/1600/main.py", line 8, in <module>
    print(sum(custo, 2))
  File "/usr/local/lib/python3.4/dist-packages/numpy/core/fromnumeric.py", line 2076, in sum
    initial=initial)
  File "/usr/local/lib/python3.4/dist-packages/numpy/core/fromnumeric.py", line 86, in _wrapreduction
    return ufunc.reduce(obj, axis, dtype, out, **passkwargs)
numpy.AxisError: axis 2 is out of bounds for array of dimension 1

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:35:56) 
-- CODE:
from numpy import *
custo = array(eval(input("digite os custos dos itens: ")))
if (custo[i] > 80):
	custo[i] = custo[i] - 0.15 * custo [i]
else:
	custo[i] = custo[i]
print(sum(custo, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:41:16) 
-- CODE:
from numpy import *
custo = array(eval(input("digite os custos dos itens: ")))
i = 0
i = i + 1
if (custo[i] > 80):
	custo[i] = custo[i] - 0.15 * custo [i]
else:
	custo[i] = custo[i]
print(sum(custo, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:41:57) 
-- CODE:
from numpy import *
custo = array(eval(input("digite os custos dos itens: ")))
i = 0
i = i + 1
if (custo[i] > 80):
	custo[i] = custo[i] - 0.15 * custo [i]
else:
	custo[i] = custo[i]
print(sum(custo, 2))
-- EXECUTION TIME:
0.564831
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1789/1600/main.py", line 9, in <module>
    print(sum(custo, 2))
  File "/usr/local/lib/python3.4/dist-packages/numpy/core/fromnumeric.py", line 2076, in sum
    initial=initial)
  File "/usr/local/lib/python3.4/dist-packages/numpy/core/fromnumeric.py", line 86, in _wrapreduction
    return ufunc.reduce(obj, axis, dtype, out, **passkwargs)
numpy.AxisError: axis 2 is out of bounds for array of dimension 1

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
